--- a/bookshare/templates/index.html
+++ b/bookshare/templates/index.html
@@ -2,8 +2,12 @@
 {% block content %}
 <div class = "container">
 	<div class = "jumbotron">
-		<h1>Welcome to the NITT BookShare</h1>
-		<p>A portal to share books with your peers.</p>
+		<h1>
+			Welcome to the NITT BookShare
+		</h1>
+		<p>
+			A portal to share books with your peers.
+		</p>
 	</div>
 </div>
 {% endblock %}
