Add login and logout views

--- a/bookshare/templates/success.html
+++ b/bookshare/templates/success.html
@@ -1,7 +1,5 @@
 {% extends 'base.html' %}
 {% block content %}
 <p>Successfully logged in</p>
-{{ user.user.username }}
-{{ user.user.password }}
-{{ user.extra }}
+{{ user.is_authenticated }}
 {% endblock %}
