--- a/bookshare/templates/base.html
+++ b/bookshare/templates/base.html
@@ -16,7 +16,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/united/bootstrap.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
+
   </head>
 
   <body>
@@ -36,15 +36,22 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
+                    {% if not user.is_authenticated %}
+                    <li>
+                        <a href="/signin/">Sign in</a>
+                    </li>
+                    {% endif %}
+                    <li>
+                        <a href="#">Browse all books</a>
+                    </li>
                     <li>
                         <a href="#">About</a>
                     </li>
-                    <li>
-                        <a href="#">Help</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
-                    </li>
+                    {% if user.is_authenticated %}
+                        <li>
+                            <a href="/logout/">Logout</a>
+                        </li>
+                    {% endif %}
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
